--- a/core/static/bootstrap/css/bootstrap.css
+++ b/core/static/bootstrap/css/bootstrap.css
@@ -3762,6 +3762,7 @@ tbody.collapse.in {
   color: #262626;
   text-decoration: none;
   background-color: #f5f5f5;
+  cursor:pointer;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
