--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -208,6 +208,12 @@
 							</h3>-->	
 					</div>
 				</div>
+			<div id="my_spinner">
+						{% endverbatim %}
+				<h2><img src="{% static 'bootstrap/images/spinner.gif' %}">
+						{% verbatim %}
+				Populating Results Table, Please Wait....</h2>
+			</div>				
 			</div>
 			<div class="col-sm-6">
 				<h3 id="results_h1">Sequence Alignment to Domain:</h3>
@@ -227,8 +233,9 @@
 				<th>Affinity</th>
 				<th>Type</th>
 				<th>Sources</th>
-			</tr>
-			<tbody id='interactions_tr' ng-repeat="(key,object) in interactions track by $index">
+			</tr>							
+			<tbody id='interactions_tr' ng-repeat="(key,object) in interactions track by $index" my-repeat-directive>
+				<div ng-show="show_element">
 					<td> {{ object.phenotype }} </td>
 					<td> {{ object.prot }} </td>
 					<td> {{ object.ligand }} </td>
@@ -271,6 +278,7 @@
 	
 					</td>
 			</tr>
+			</div>
 			</tbody>
 			</table>
 		</div>
@@ -278,8 +286,8 @@
         <div ng-hide="ramp_quer" class='container-fluid' id='results_page_int'>
                 <h1 id="results_h1">Known {{ family_short }} Interactions:</h1>
 		<div id="scrolling_table">
-                		<table id="interaction_table" border="1">
-             			<tr>
+			<table id="interaction_table" border="1">
+			<tr>
 					<th>Phenotype</th>
 					<th>RAMP</th>
 					<th>Ligand</th>
@@ -287,7 +295,7 @@
 					<th>Type</th>
 					<th>Sources</th>
 				</tr>
-				<tbody id='interactions_tr' ng-repeat="(phenotype,object) in interactions track by $index">
+				<tbody id='interactions_tr' ng-repeat="(phenotype,object) in interactions track by $index" my-repeat-directive>
 					<td> {{ object.phenotype }} </td>
 					<td> {{ object.prot }} </td>
 					<td> {{ object.ligand }} </td>
