added affinity units, added PDB ids for proteins, added pubchem IDs for ligands

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -229,7 +229,7 @@
 				<th>Phenotype</th>
 				<th>GPCR</th>
 				<th>Ligand</th>
-				<th>Affinity</th>
+				<th>Affinity (pEC<sub>50</sub>)</th>
 				<th>Type</th>
 				<th>Sources</th>
 			</tr>							
@@ -290,7 +290,7 @@
 					<th>Phenotype</th>
 					<th>RAMP</th>
 					<th>Ligand</th>
-					<th>Affinity</th>
+				    <th>Affinity (pEC<sub>50</sub>)</th>
 					<th>Type</th>
 					<th>Sources</th>
 				</tr>
@@ -412,7 +412,7 @@
 				<th>Phenotype</th>
 				<th>GPCR</th>
 				<th>RAMP</th>
-				<th>Affinity</th>
+				<th>Affinity (pEC<sub>50</sub>)</th>
 				<th>Type</th>
 				<th>Sources</th>
 	
