fixed interaction status display issue

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -201,7 +201,7 @@
 						<h3 id='summary_h3'><span style=font-weight:bold>Identity with interacting domain: </span><span style=color:red> 
 						{{ confidence }}% </h3>
 					</div>
-					<div ng-hide="ramp_query">
+					<div ng-hide="ramp_quer">
 						<h3 id='summary_h3'><span style=font-weight:bold>Interaction Status: </span>
 						{{ int_status }} </h3>
 					</div>
