removed affinities, clarified ligand type -> ligand action

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -229,8 +229,7 @@
 				<th>Phenotype</th>
 				<th>GPCR</th>
 				<th>Ligand</th>
-				<th>Affinity (pEC<sub>50</sub>)</th>
-				<th>Type</th>
+				<th>Ligand Action</th>
 				<th>Sources</th>
 			</tr>							
 			<tbody id='interactions_tr' ng-repeat="(key,object) in interactions track by $index" my-repeat-directive>
@@ -238,7 +237,6 @@
 					<td> {{ object.phenotype }} </td>
 					<td> {{ object.prot }} </td>
 					<td> {{ object.ligand }} </td>
-					<td> {{ object.ligand_affinity}} </td>
 					<td> {{ object.ligand_binding_type}} </td>				
 					<td ng-init="hide_sources = true">
 					{{ object.ref_length }}
@@ -290,15 +288,13 @@
 					<th>Phenotype</th>
 					<th>RAMP</th>
 					<th>Ligand</th>
-				    <th>Affinity (pEC<sub>50</sub>)</th>
-					<th>Type</th>
+					<th>Ligand Action</th>
 					<th>Sources</th>
 				</tr>
 				<tbody id='interactions_tr' ng-repeat="(phenotype,object) in interactions track by $index" my-repeat-directive>
 					<td> {{ object.phenotype }} </td>
 					<td> {{ object.prot }} </td>
 					<td> {{ object.ligand }} </td>
-					<td> {{ object.ligand_affinity}} </td>
 					<td> {{ object.ligand_binding_type}} </td>
 					<td ng-init="hide_sources = true">
 					{{ object.ref_length }}	
@@ -412,8 +408,7 @@
 				<th>Phenotype</th>
 				<th>GPCR</th>
 				<th>RAMP</th>
-				<th>Affinity (pEC<sub>50</sub>)</th>
-				<th>Type</th>
+				<th>Ligand Action</th>
 				<th>Sources</th>
 	
 			</tr>
@@ -423,7 +418,6 @@
 					<td> {{ object.name }} </td>
 					<td> {{ object.gpcr }} </td>
 					<td> {{ object.ramp }} </td>
-					<td> {{ object.ligand_affinity}} </td>
 					<td> {{ object.ligand_binding_type}} </td>
 					<td ng-init="hide_sources = true">
 					{{ object.ref_length }}
