updated citation information

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -64,6 +64,7 @@
     </div>
   </div>
 </nav>
+</div>
     <div class="container-fluid">
 	<div class="row">
 		<br>
@@ -141,8 +142,14 @@
 		<div class="col-sm-6">
 			<img class="img-responsive" src="{% static 'update_predict_algo.png' %}"/>
 		</div>
-	</div>
     </div>
+	<div class="row">
+		<div id="about_text" class="col-sm-6">
+			<h2><span style=font-weight:bold>Citation Information:</span></h2>
+    			<p> Topaz,N., Mojib,N., Chande,A.T. et al. RampDB: a web application and database for the exploration and prediction of receptor activity modifying protein interactions.
+                	Database (2017) Vol. 2017: article ID bax067; doi:10.1093/database/bax067</p>
+		</div>
+	</div>
 </body>
 
 
